# demo-book-service

./: .gitignore  Dockerfile  JenkinsfileBuild  README.md  docker-entrypoint.sh  example.env  example_env.ps1  pyproject.toml
book_service/: main.py  manage.py
fastapi_template/: main.py
helm/: Chart.yaml  values.yaml
helm/templates/: database.yaml  deployment.yaml  secrets.yaml  service.yaml
helm/values/: dev.yaml
